--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ cmake = { version = "0.1.48", optional = true }
 [features]
 default = ["build"] 
 build = ["dep:cmake", "clone"]
+no-build = ["build"]
 clone = []
