--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,11 @@ links = "libjpeg"
 [dependencies]
 
 [build-dependencies]
-cc = { version = "1.0.73", features = ["parallel"], optioal = true }
-itoa = { version = "1.0.4", optional = true }
+cc = { version = "1.0.73", features = ["parallel"] }
+itoa = { version = "1.0.4" }
 
 [features]
 default = ["build"] 
-build = ["dep:cc", "dep:itoa", "clone"]
+build = ["clone"]
 no-build = []
 clone = []
