--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ itoa = { version = "1.0.4" }
 
 [features]
 default = ["build"] 
-build = ["clone"]
-no-build = []
+
+simd = []
 clone = []
+build = ["clone", "simd"]
+no-build = []
