--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 [build-dependencies]
 anyhow = "1.0.75"
 bindgen = "0.69.1"
-cc = { version = "1.0.73", features = ["parallel"] }
+cmake = "0.1.50"
 nasm-rs = { version = "0.2.5", features = ["parallel"] }
 # sorse = { version = "0.1.0", registry = "ktra" }
 sorse = { path = "../sorse/" }
