--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,4 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 [build-dependencies]
 anyhow = "1.0.75"
 cmake = "0.1.50"
-
-[features]
+tap = "1.0.1"
